<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonMvvmExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/mvvm_example" />

    <Button
        android:id="@+id/buttonBottomNavigationExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/bottom_navigation_example" />

    <Button
        android:id="@+id/buttonDrawerNavigationExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/drawer_navigation_example" />

    <Button
        android:id="@+id/buttonDynamicFeatureExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/dynamic_feature_example" />

    <Button
        android:id="@+id/buttonLanguageChangeExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/language_change_example" />

    <Button
        android:id="@+id/buttonErrorHandlingExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/error_handling_example" />

    <Button
        android:id="@+id/buttonDesignSystemExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_8"
        android:text="@string/design_system_example" />
</LinearLayout>